--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "db": "json-server --watch db.json"
+    "db": "json-server --watch db.json --port 3002"
   },
   "devDependencies": {
     "dlv": "^1.1.1",
@@ -20,6 +20,7 @@
     "json-server": "^0.12.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-tether": "^0.6.1",
     "tinycolor2": "^1.4.1",
     "unstated": "^2.0.3"
   }
