--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "json-server": "^0.12.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-sortable-hoc": "^0.7.0",
+    "react-sortablejs": "^1.3.6",
     "react-tether": "^0.6.1",
+    "sortablejs": "^1.6.1",
     "tinycolor2": "^1.4.1",
     "unstated": "^2.0.3"
   }
