--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dlv": "^1.1.1",
     "dset": "^1.0.1",
     "json-server": "^0.12.2",
+    "nuka-carousel": "^4.2.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-sortable-hoc": "^0.7.0",
